OVERFLOW SOLVED

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -119,3 +119,7 @@ section{
 html{
   scroll-behavior: smooth;;
 }
+
+.wrapper {
+  overflow-x: hidden;
+}
